k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ip
spec:
  ingressClassName: nginx
  rules:
    - host: "ip.cotyhamilton.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ip
                port:
                  number: 8000
